--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
     "gulp-stylus": "^2.6.0",
     "stylus": "^0.54.5"
   }
