--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-if": "^2.0.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "stylus": "^0.54.5"
