--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-if": "^2.0.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
+    "gulp-watch": "^4.3.10",
     "stylus": "^0.54.5"
   }
 }
