--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.1",
+    "gulp-newer": "^1.3.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "gulp-watch": "^4.3.10",
