--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-newer": "^1.3.0",
+    "gulp-remember": "^0.3.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "gulp-watch": "^4.3.10",
+    "path": "^0.12.7",
     "stylus": "^0.54.5"
   }
 }
