--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.0",
