--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-newer": "^1.3.0",
+    "gulp-notify": "^2.2.0",
     "gulp-remember": "^0.3.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
