--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "gulp-watch": "^4.3.10",
+    "multipipe": "^1.0.2",
     "path": "^0.12.7",
     "stylus": "^0.54.5"
   }
