--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-watch": "^4.3.10",
     "multipipe": "^1.0.2",
     "path": "^0.12.7",
+    "stream-combiner2": "^1.1.1",
     "stylus": "^0.54.5"
   }
 }
