--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "2": "0.0.1",
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "gulp-autoprefixer": "^3.1.1",
@@ -26,6 +27,7 @@
     "multipipe": "^1.0.2",
     "path": "^0.12.7",
     "stream-combiner2": "^1.1.1",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "through": "^2.3.8"
   }
 }
