--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "stream-combiner2": "^1.1.1",
     "stylus": "^0.54.5",
-    "through": "^2.3.8"
+    "through": "^2.3.8",
+    "through2": "^2.0.1"
   }
 }
