--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "stream-combiner2": "^1.1.1",
     "stylus": "^0.54.5",
     "through": "^2.3.8",
-    "through2": "^2.0.1"
+    "through2": "^2.0.1",
+    "vinyl": "^2.0.0"
   }
 }
