--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "2": "0.0.1",
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
+    "eslint": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.1",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^2.2.0",
