--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "eslint": "^3.9.1",
+    "fs": "0.0.1-security",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
