--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.1",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
