--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.1",
@@ -25,6 +26,8 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-remember": "^0.3.1",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "gulp-watch": "^4.3.10",
